fixed: zoom on mobile devices

--- a/style.css
+++ b/style.css
@@ -138,3 +138,10 @@ body {
   margin-right: 0;
   cursor: pointer;
 }
+@media screen and (-webkit-min-device-pixel-ratio:0) { 
+  select,
+  textarea,
+  input {
+    font-size: 16px;
+  }
+}
